--- a/Udemy/VueJS2/Section01/Exercise04/styles.css
+++ b/Udemy/VueJS2/Section01/Exercise04/styles.css
@@ -4,6 +4,12 @@
   border: 1px solid black;
 }
 
+.rectangle {
+  width: 200px !important;
+  height: 50px !important;
+  border: 1px solid black;
+}
+
 .highlight {
   background-color: red;
   width: 200px !important;
@@ -12,4 +18,41 @@
 .shrink {
   background-color: gray;
   width: 50px !important;
+}
+
+.colorRed {
+  color: red;
+}
+
+.textCenter {
+  text-align: center;
+}
+
+.backgroundYellow {
+  background-color: yellow;
+}
+
+.marginAuto {
+  margin: auto;
+}
+
+
+.red {
+  background-color: red;
+}
+
+.green {
+  background-color: green;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.largeBorder {
+  border: 5px solid black;
 }
