--- a/Udemy/VueJS2/Section10/Exercise/src/css/style.css
+++ b/Udemy/VueJS2/Section10/Exercise/src/css/style.css
@@ -33,3 +33,21 @@
 .margin-Little {
   margin: 8px;
 }
+
+.transition-Fade {
+  -webkit-animation: fade 1.5s;
+  animation: fade 1.5s;
+  opacity: 1;
+}
+
+/* transition */
+
+@-webkit-keyframes fade {
+  from { opacity: 0 }
+  to { opacity: 1 }
+}
+
+@keyframes fade {
+  from { opacity: 0 }
+  to { opacity: 1 }
+}
